tests/paczka1/fuzzy1/41776206.err
Error in line 2: llKauvXuH S547 51,1
Error in line 4: llKauvXuH A526 51,9
Error in line 16: llKauvXuH S547 -5,1
Error in line 11: llKauvXuH S547 81,6
Error in line 13: FDbD A552 82,0
Error in line 26: llKauvXuH S547 97,8
